Review: code formatting fixed some toString implementations;
Signed-off-by: Stefan Maute <stefan.maute@bosch.io>